feat: Add Product pipeline
