# openapi.yaml
@@ -91,6 +91,44 @@ paths:
                 type: integer
                 format: int32
 
+  /Product:
+    get:
+      summary: "GET Product"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "A 32 bit integer"
+          required: false
+          schema:
+            type: integer
+            format: int32
+      responses:
+        "200":
+          description: "OK"
+          headers:
+            "x-product-count":
+              schema:
+                type: integer
+                format: int32
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    id:
+                      type: integer
+                      format: int32
+                    name:
+                      type: string
+        "404":
+          description: "Not found"
+          headers:
+            "x-product-count":
+              schema:
+                type: integer
+                format: int32
+
 components:
   schemas:
     CustomerUuid:
